assets/styles/components/timeline.styl
.timeline {
  padding: 60px 30px;

  @media (min-width: is_tablet) {
    padding: 100px side_padding;
  }

  @media (min-width: is_desktop) {
    padding: 100px 0;
  }
}

.timeline h2 {
  text-align: center;
}

.timeline__text {
  color: $orange;
}
.timeline__items {
  list-style-type: none;
  max-width: content-width;
  margin: 30px auto;
  padding-left: 0;

  @media (min-width: is_tablet) {
    margin: 60px auto 0;
  }
}

.timeline__items li {
  position: relative;
  width: 100%;
  vertical-align: top;
  padding-top: 30px;
  padding-left: 60px;
  border-left: 3px dashed purple-darker;

  p {
    margin-bottom: 0;
  }

  @media (min-width: is_tablet) {
    width: calc(50% + 1.5px);

    &:nth-child(odd) {
      padding-right: 60px;
      border-right: 3px dashed purple-darker;
      border-left: none;
      padding-left: 0;
    }

    &:nth-child(even) {
      margin-left: auto;
      padding-left: 60px;
      padding-right: 0;
      border-left: 3px dashed purple-darker;
    }
  }
}

.timeline__items h3 {
  margin-bottom: 0.25em;
}

.timeline__arrow {
  border-radius: 50%;
  width: 50px;
  height: 50px;
  position: absolute;
  top: 50%;
  transform: translateY(-15px);
  left: -25px;
  background-color: green;
}

.timeline__arrow img {
  position: absolute;
  top: 14px;
  left: 20px;
  width: auto;
  height: 22px;
}

.timeline__items li:nth-child(odd) .timeline__arrow {

  @media (min-width: is_tablet) {
    right: -25px;
    left: auto;

    img {
      transform: rotate(180deg);
      top: 14px;
      left: 16px;
    }
  }
}

